--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-    image: "/images/waterfront.jpg"
+    image: "/images/cool_gif_neural_network.gif"
 ---
